# StarRupture-ModLoader

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
loader/: CMakeLists.txt  build.sh  dwmapi.cpp  dwmapi.def  trampolines.S  version.cpp
